Changed memo output to table instead of ul. Added submit button. Added delete and clear buttons for each entry.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <form>
       <input id="item" type="text" placeholder="New">
     </form>
-    <ul></ul>
+    <table>
+    </table>
     <button class="btn btn-lg btn-primary" id="submit" type="button">Submit</button>
     <button class="btn btn-lg btn-primary" id="clear" type="submit">Clear All</button>
   </div>
