--- a/index.html
+++ b/index.html
@@ -6,26 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link href="style.css" rel="stylesheet">
-  <title>Memo App</title>
-
+  <title>NOTES APP</title>
 </head>
 
 <body class="justify-content-center">
-  <div class="small-container border border-dark" style="padding:20px; max-width:700px">
-    <h1 class="h3 mb-3 font-weight-normal">Enter Memo:</h1>
+  <div class="small-container border border-dark mainWindow">
+    <h1 class="h3 mb-3 font-weight-normal">MY NOTES:</h1>
     <form>
-      <input id="item" type="text" placeholder="New">
+      <input class="inputBox" id="item" type="text" placeholder="Write a note">
     </form>
-    <table>
+    <table class="tbl">
     </table>
     <button class="btn btn-lg btn-primary" id="submit" type="button">Submit</button>
     <button class="btn btn-lg btn-primary" id="clear" type="submit">Clear All</button>
   </div>
 
   <script src="script.js"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 
 </html>
